src/objects/EventTicket__c.object
<CustomObject>
    <description>Junction object linking specific types of tickets sold for event date times and enabling multi-event date times to be sold on one ticket, such as megatickets and multi-day festival tickets</description>
    <fields>
        <fullName>EventDateTime__c</fullName>
        <label>Event Date Time</label>
        <referenceTo>EventDateTime__c</referenceTo>
        <relationshipLabel>Event Tickets</relationshipLabel>
        <relationshipName>EventTickets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EventTicketAgency__c</fullName>
        <label>Event-Ticket Agency</label>
        <referenceTo>EventTicketAgency__c</referenceTo>
        <relationshipLabel>Event-Tickets</relationshipLabel>
        <relationshipName>EventTickets</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SourceSystemId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SourceSystemId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Event-Ticket</label>
    <nameField>
        <displayFormat>ET-{000000}</displayFormat>
        <label>Event-Ticket ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event-Tickets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>